Worked on Marketinglist-Target

--- a/IntegrationTool.Module.WriteDynamicCrmMarketingLists/IntegrationTool.Module.WriteDynamicCrmMarketingLists.csproj
+++ b/IntegrationTool.Module.WriteDynamicCrmMarketingLists/IntegrationTool.Module.WriteDynamicCrmMarketingLists.csproj
@@ -54,11 +54,21 @@
     <Compile Include="ConfigurationWindow.xaml.cs">
       <DependentUpon>ConfigurationWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UserControls\ListMappingJoin.xaml.cs">
+      <DependentUpon>ListMappingJoin.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\ListMappingManual.xaml.cs">
+      <DependentUpon>ListMappingManual.xaml</DependentUpon>
+    </Compile>
     <Compile Include="WriteToDynamicsCrmMarketingLists.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WriteToDynamicsCrmMarketingListsConfiguration.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\IntegrationTool.DataMappingControl\IntegrationTool.DataMappingControl.csproj">
+      <Project>{2199dd43-d8be-4c40-9395-b3bbb3af6ca6}</Project>
+      <Name>IntegrationTool.DataMappingControl</Name>
+    </ProjectReference>
     <ProjectReference Include="..\IntegrationTool.Module.ConnectToDynamicsCrm\IntegrationTool.Module.ConnectToDynamicsCrm.csproj">
       <Project>{42d951a0-a901-4bce-ac49-b735c1ff99ca}</Project>
       <Name>IntegrationTool.Module.ConnectToDynamicsCrm</Name>
@@ -77,6 +87,14 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="ConfigurationWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\ListMappingJoin.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\ListMappingManual.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
