--- a/IntegrationTool.Module.WriteDynamicCrmMarketingLists/IntegrationTool.Module.WriteDynamicCrmMarketingLists.csproj
+++ b/IntegrationTool.Module.WriteDynamicCrmMarketingLists/IntegrationTool.Module.WriteDynamicCrmMarketingLists.csproj
@@ -55,6 +55,9 @@
     <Compile Include="ConfigurationWindow.xaml.cs">
       <DependentUpon>ConfigurationWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="SDK\ListHelper.cs" />
+    <Compile Include="SDK\Marketinglist.cs" />
+    <Compile Include="SDK\Marketinglists.cs" />
     <Compile Include="UserControls\ListMappingJoin.xaml.cs">
       <DependentUpon>ListMappingJoin.xaml</DependentUpon>
     </Compile>
@@ -66,6 +69,7 @@
     </Compile>
     <Compile Include="WriteToDynamicsCrmMarketingLists.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WriteToDynamicsCrmMarketingLists.WriteData.cs" />
     <Compile Include="WriteToDynamicsCrmMarketingListsConfiguration.cs" />
   </ItemGroup>
   <ItemGroup>
