Worked on marketinglist target. Soon ready to release!

--- a/IntegrationTool.Module.Crm2013Wrapper/IntegrationTool.Module.CrmWrapper.csproj
+++ b/IntegrationTool.Module.Crm2013Wrapper/IntegrationTool.Module.CrmWrapper.csproj
@@ -59,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Crm2013Wrapper.cs" />
+    <Compile Include="DateTimeHelper.cs" />
     <Compile Include="JoinResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
