--- a/IntegrationTool.UnitTests.Targets/IntegrationTool.UnitTests.Targets.csproj
+++ b/IntegrationTool.UnitTests.Targets/IntegrationTool.UnitTests.Targets.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Test_Crm2013Wrapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Test_DbMetadataAbstraction.cs" />
+    <Compile Include="Test_DeleteInDynamicsCrm.cs" />
     <Compile Include="Test_WriteToDynamicsCrm.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -96,6 +97,10 @@
     <ProjectReference Include="..\IntegrationTool.Module.Crm2013Wrapper\IntegrationTool.Module.CrmWrapper.csproj">
       <Project>{3c424a58-27cc-4902-99da-8bd06d2f1143}</Project>
       <Name>IntegrationTool.Module.CrmWrapper</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\IntegrationTool.Module.DeleteInDynamicsCrm\IntegrationTool.Module.DeleteInDynamicsCrm.csproj">
+      <Project>{efabd2f9-e72b-4183-8119-08a1ce4ca01e}</Project>
+      <Name>IntegrationTool.Module.DeleteInDynamicsCrm</Name>
     </ProjectReference>
     <ProjectReference Include="..\IntegrationTool.Module.WriteToDynamicsCrm\IntegrationTool.Module.WriteToDynamicsCrm.csproj">
       <Project>{cd0ef612-415e-4a40-8d40-c77186a083c9}</Project>
