--- a/IntegrationTool.Module.DeleteInDynamicsCrm/IntegrationTool.Module.DeleteInDynamicsCrm.csproj
+++ b/IntegrationTool.Module.DeleteInDynamicsCrm/IntegrationTool.Module.DeleteInDynamicsCrm.csproj
@@ -58,6 +58,7 @@
       <DependentUpon>ConfigurationWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="DeleteInDynamicsCrm.cs" />
+    <Compile Include="DeleteInDynamicsCrm.WriteData.cs" />
     <Compile Include="DeleteInDynamicsCrmConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserControls\DeletionMappingJoin.xaml.cs">
