--- a/IntegrationTool.Module.DeleteInDynamicsCrm/IntegrationTool.Module.DeleteInDynamicsCrm.csproj
+++ b/IntegrationTool.Module.DeleteInDynamicsCrm/IntegrationTool.Module.DeleteInDynamicsCrm.csproj
@@ -43,7 +43,6 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
@@ -60,6 +59,13 @@
     <Compile Include="DeleteInDynamicsCrm.cs" />
     <Compile Include="DeleteInDynamicsCrm.WriteData.cs" />
     <Compile Include="DeleteInDynamicsCrmConfiguration.cs" />
+    <Compile Include="Logging\Logger.cs" />
+    <Compile Include="Logging\LogSummaryControl.xaml.cs">
+      <DependentUpon>LogSummaryControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Logging\LogWindow.xaml.cs">
+      <DependentUpon>LogWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserControls\DeletionMappingJoin.xaml.cs">
       <DependentUpon>DeletionMappingJoin.xaml</DependentUpon>
@@ -87,6 +93,14 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Logging\LogSummaryControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Logging\LogWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="UserControls\DeletionMappingJoin.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -95,6 +109,7 @@
   <ItemGroup>
     <EmbeddedResource Include="Icon.xml" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
