--- a/IntegrationTool.Module.DeleteInDynamicsCrm/IntegrationTool.Module.DeleteInDynamicsCrm.csproj
+++ b/IntegrationTool.Module.DeleteInDynamicsCrm/IntegrationTool.Module.DeleteInDynamicsCrm.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -65,6 +66,10 @@
     </Compile>
     <Compile Include="Logging\LogWindow.xaml.cs">
       <DependentUpon>LogWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Logging\RecordLogList\RecordLog.cs" />
+    <Compile Include="Logging\RecordLogList\RecordLogListControl.xaml.cs">
+      <DependentUpon>RecordLogListControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserControls\DeletionMappingJoin.xaml.cs">
@@ -98,6 +103,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Logging\LogWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Logging\RecordLogList\RecordLogListControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
