Begin working on textfile loader. Will enable xml-loading later on...

--- a/IntegrationTool.UnitTests.Sources/IntegrationTool.UnitTests.Sources.csproj
+++ b/IntegrationTool.UnitTests.Sources/IntegrationTool.UnitTests.Sources.csproj
@@ -74,6 +74,11 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="TestData\LoadFromTextFile\TextXml.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
