Finished XML Transformation. Added new DataFilters. Refactored ColumnMetadata.

--- a/IntegrationTool.SDK/IntegrationTool.SDK.csproj
+++ b/IntegrationTool.SDK/IntegrationTool.SDK.csproj
@@ -90,8 +90,10 @@
     <Compile Include="Data\DataConditionClasses\IntegerLowerThanCondition.cs" />
     <Compile Include="Data\DataConditionClasses\IntegerNotNullCondition.cs" />
     <Compile Include="Data\DataConditionClasses\IntegerNullCondition.cs" />
+    <Compile Include="Data\DataConditionClasses\StringEndsWithCondition.cs" />
     <Compile Include="Data\DataConditionClasses\StringEqualCondition.cs" />
     <Compile Include="Data\DataConditionClasses\StringNullOrEmptyCondition.cs" />
+    <Compile Include="Data\DataConditionClasses\StringStartsWithCondition.cs" />
     <Compile Include="Data\DataFilter.ConditionChecks.cs" />
     <Compile Include="Data\DataFilter.cs" />
     <Compile Include="Data\DataFilterHelper.cs" />
