--- a/IntegrationTool.Module.ConnectToExcel/IntegrationTool.Module.ConnectToExcel.csproj
+++ b/IntegrationTool.Module.ConnectToExcel/IntegrationTool.Module.ConnectToExcel.csproj
@@ -55,6 +55,12 @@
     <Compile Include="ConnectToExcel.cs" />
     <Compile Include="ConnectToExcelConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserControls\ExistingFileAndSheetControl.xaml.cs">
+      <DependentUpon>ExistingFileAndSheetControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\NewFileAndSheetControl.xaml.cs">
+      <DependentUpon>NewFileAndSheetControl.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\IntegrationTool.SDK\IntegrationTool.SDK.csproj">
@@ -65,6 +71,14 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="ConfigurationWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\ExistingFileAndSheetControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\NewFileAndSheetControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
