--- a/IntegrationTool.Module.WriteToExcel/IntegrationTool.Module.WriteToExcel.csproj
+++ b/IntegrationTool.Module.WriteToExcel/IntegrationTool.Module.WriteToExcel.csproj
@@ -51,6 +51,9 @@
     <Compile Include="ConfigurationWindow.xaml.cs">
       <DependentUpon>ConfigurationWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UserControls\SimpleExcelTarget.xaml.cs">
+      <DependentUpon>SimpleExcelTarget.xaml</DependentUpon>
+    </Compile>
     <Compile Include="WriteToExcel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WriteToExcel.WriteData.cs" />
@@ -65,6 +68,10 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="ConfigurationWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\SimpleExcelTarget.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
