--- a/IntegrationTool.Module.LoadFromCSV/IntegrationTool.Module.LoadFromCSV.csproj
+++ b/IntegrationTool.Module.LoadFromCSV/IntegrationTool.Module.LoadFromCSV.csproj
@@ -31,6 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CsvHelper">
+      <HintPath>..\References\CsvHelper.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
