--- a/IntegrationTool.ProjectDesigner/IntegrationTool.ProjectDesigner.csproj
+++ b/IntegrationTool.ProjectDesigner/IntegrationTool.ProjectDesigner.csproj
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CsvHelper">
+      <HintPath>..\References\CsvHelper.dll</HintPath>
+    </Reference>
     <Reference Include="EPPlus, Version=3.1.3.0, Culture=neutral, PublicKeyToken=ea159fdaa78159a1, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\References\EPPlus.dll</HintPath>
