--- a/IntegrationTool.UnitTests.Sources/app.config
+++ b/IntegrationTool.UnitTests.Sources/app.config
@@ -8,7 +8,7 @@
     <userSettings>
         <IntegrationTool.UnitTests.Sources.Properties.Settings>
             <setting name="CrmConnectionString" serializeAs="String">
-                <value>Url=http://devserv/DataProc; Domain=DEV; Username=johntest; Password=12ab!12ab;</value>
+                <value>Url=http://devserv/IT; Domain=DEV; Username=johntest; Password=12ab!12ab;</value>
             </setting>
         </IntegrationTool.UnitTests.Sources.Properties.Settings>
     </userSettings>
