--- a/IntegrationTool.UnitTests.Targets/app.config
+++ b/IntegrationTool.UnitTests.Targets/app.config
@@ -11,7 +11,7 @@
     <applicationSettings>
         <IntegrationTool.UnitTests.Targets.Properties.Settings>
             <setting name="CrmConnectionString" serializeAs="String">
-                <value>Url=http://devserv/DataProc; Domain=DEV; Username=johntest; Password=12ab!12ab;</value>
+                <value>Url=http://devserv/IT; Domain=DEV; Username=johntest; Password=12ab!12ab;</value>
             </setting>
         </IntegrationTool.UnitTests.Targets.Properties.Settings>
     </applicationSettings>
