--- a/IntegrationTool.Module.WriteToDynamicsCrmN2N/IntegrationTool.Module.WriteToDynamicsCrmN2N.csproj
+++ b/IntegrationTool.Module.WriteToDynamicsCrmN2N/IntegrationTool.Module.WriteToDynamicsCrmN2N.csproj
@@ -42,6 +42,7 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -51,6 +52,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConfigurationContent.xaml.cs">
+      <DependentUpon>ConfigurationContent.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ConfigurationWindow.xaml.cs">
       <DependentUpon>ConfigurationWindow.xaml</DependentUpon>
     </Compile>
@@ -70,6 +74,10 @@
       <Name>IntegrationTool.Module.ConnectToDynamicsCrm</Name>
       <Private>False</Private>
     </ProjectReference>
+    <ProjectReference Include="..\IntegrationTool.Module.Crm2013Wrapper\IntegrationTool.Module.CrmWrapper.csproj">
+      <Project>{3c424a58-27cc-4902-99da-8bd06d2f1143}</Project>
+      <Name>IntegrationTool.Module.CrmWrapper</Name>
+    </ProjectReference>
     <ProjectReference Include="..\IntegrationTool.SDK\IntegrationTool.SDK.csproj">
       <Project>{071dbaa8-6722-4c52-a978-063e39aff2e5}</Project>
       <Name>IntegrationTool.SDK</Name>
@@ -77,6 +85,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Page Include="ConfigurationContent.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="ConfigurationWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
