--- a/IntegrationTool.Module.WriteToDynamicsCrmN2N/IntegrationTool.Module.WriteToDynamicsCrmN2N.csproj
+++ b/IntegrationTool.Module.WriteToDynamicsCrmN2N/IntegrationTool.Module.WriteToDynamicsCrmN2N.csproj
@@ -58,6 +58,7 @@
     <Compile Include="ConfigurationWindow.xaml.cs">
       <DependentUpon>ConfigurationWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="N2NMultipleFoundMode.cs" />
     <Compile Include="WriteToDynamicsCrmN2N.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WriteToDynamicsCrmN2NConfiguration.cs" />
