Fixed fetch-xml Additionally when source had errors, an error was possible. Should be gone now as well.

--- a/IntegrationTool.SDK/IntegrationTool.SDK.csproj
+++ b/IntegrationTool.SDK/IntegrationTool.SDK.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Data\DataFilter.cs" />
     <Compile Include="Data\DataFilterHelper.cs" />
     <Compile Include="Data\DatastoreHelper.cs" />
+    <Compile Include="Data\DummyDataStore.cs" />
     <Compile Include="Data\IDatabaseInterface.cs" />
     <Compile Include="Data\IDatastore.cs" />
     <Compile Include="Data\DataObject.cs" />
