--- a/IntegrationTool.Module.ConnectToUrl/IntegrationTool.Module.ConnectToUrl.csproj
+++ b/IntegrationTool.Module.ConnectToUrl/IntegrationTool.Module.ConnectToUrl.csproj
@@ -49,6 +49,12 @@
     <Compile Include="ConnectToUrl.cs" />
     <Compile Include="ConnectToUrlConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserControls\CertificateSettings.xaml.cs">
+      <DependentUpon>CertificateSettings.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\ProxySettings.xaml.cs">
+      <DependentUpon>ProxySettings.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\IntegrationTool.SDK\IntegrationTool.SDK.csproj">
@@ -59,6 +65,14 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="ConfigurationWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\CertificateSettings.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\ProxySettings.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
