Added new string conditions and new string transformations

--- a/IntegrationTool.Module.StringTranformation/IntegrationTool.Module.StringTranformation.csproj
+++ b/IntegrationTool.Module.StringTranformation/IntegrationTool.Module.StringTranformation.csproj
@@ -60,6 +60,7 @@
     <Compile Include="TransformationClasses\PadLeftTransformation.cs" />
     <Compile Include="TransformationClasses\PadRight.cs" />
     <Compile Include="TransformationClasses\ReplaceStringTransformation.cs" />
+    <Compile Include="TransformationClasses\SetValue.cs" />
     <Compile Include="TransformationClasses\TrimEndTransformation.cs" />
     <Compile Include="TransformationClasses\TrimStartTransformation.cs" />
     <Compile Include="TransformationClasses\TrimTransformation.cs" />
