Added regex replace

--- a/IntegrationTool.Module.StringTranformation/IntegrationTool.Module.StringTranformation.csproj
+++ b/IntegrationTool.Module.StringTranformation/IntegrationTool.Module.StringTranformation.csproj
@@ -59,6 +59,7 @@
     <Compile Include="TransformationClasses\ITransformationExecutor.cs" />
     <Compile Include="TransformationClasses\PadLeftTransformation.cs" />
     <Compile Include="TransformationClasses\PadRight.cs" />
+    <Compile Include="TransformationClasses\RegexReplace.cs" />
     <Compile Include="TransformationClasses\ReplaceStringTransformation.cs" />
     <Compile Include="TransformationClasses\SetValue.cs" />
     <Compile Include="TransformationClasses\TrimEndTransformation.cs" />
