Picklist-Mapping can now be configured on what should happen, if no existing mapping was found.

--- a/IntegrationTool.Module.WriteToDynamicsCrm/IntegrationTool.Module.WriteToDynamicsCrm.csproj
+++ b/IntegrationTool.Module.WriteToDynamicsCrm/IntegrationTool.Module.WriteToDynamicsCrm.csproj
@@ -75,6 +75,7 @@
     </Compile>
     <Compile Include="Logging\RecordLogList\RecordLog.cs" />
     <Compile Include="SDK\Enums\ImportMode.cs" />
+    <Compile Include="SDK\Enums\MappingNotFoundType.cs" />
     <Compile Include="SDK\Enums\MultipleFoundMode.cs" />
     <Compile Include="SDK\Enums\PicklistMappingType.cs" />
     <Compile Include="SDK\Enums\RelationMappingType.cs" />
