Do not use this commit

--- a/IntegrationTool.ApplicationCore/IntegrationTool.ApplicationCore.csproj
+++ b/IntegrationTool.ApplicationCore/IntegrationTool.ApplicationCore.csproj
@@ -50,6 +50,7 @@
     <Compile Include="ModuleLoader.cs" />
     <Compile Include="ProjectLoader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SequentialExecutionPlanner.cs" />
     <Compile Include="SubFlowExecution.cs" />
   </ItemGroup>
   <ItemGroup>
